--- a/requirements.txt
+++ b/requirements.txt
@@ -1,169 +1,210 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.13
-aiosignal==1.4.0
 annotated-types==0.7.0
-anyio==4.9.0
-appdirs==1.4.4
-asttokens==3.0.0
-attrs==25.3.0
-babel==2.17.0
-backoff==2.2.1
-backrefs==5.9
-bcrypt==4.3.0
-blinker==1.9.0
-build==1.2.2.post1
+anyio==4.3.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==23.2.0
+Babel==2.14.0
+beautifulsoup4==4.12.3
+black==25.1.0
+bleach==6.1.0
+blis==1.3.0
 cachetools==5.5.2
-certifi==2025.7.9
-cffi==1.17.1
-cfgv==3.4.0
-charset-normalizer==3.4.2
-chromadb==1.0.15
-click==8.2.1
+catalogue==2.0.10
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.8
+cloudpathlib==0.21.1
+cloudpickle==3.1.1
 colorama==0.4.6
-coloredlogs==15.0.1
-crewai==0.141.0
-cryptography==45.0.5
-decorator==5.2.1
-distlib==0.3.9
-distro==1.9.0
-docstring_parser==0.16
-durationpy==0.10
-et_xmlfile==2.0.0
-executing==2.2.0
-filelock==3.18.0
-flatbuffers==25.2.10
-frozenlist==1.7.0
-fsspec==2025.5.1
-ghp-import==2.1.0
-google-auth==2.40.3
-googleapis-common-protos==1.70.0
-greenlet==3.2.3
-grpcio==1.73.1
-h11==0.16.0
-httpcore==1.0.9
+comm==0.2.1
+confection==0.1.5
+contourpy==1.3.2
+cryptography==45.0.2
+cycler==0.12.1
+cymem==2.0.11
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.8
+dnspython==2.7.0
+docx2txt==0.9
+email_validator==2.2.0
+en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl#sha256=5e6329fe3fecedb1d1a02c3ea2172ee0fede6cea6e4aefb6a02d832dba78a310
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+executing==2.0.1
+Farama-Notifications==0.0.4
+fastapi==0.115.12
+fastapi-cli==0.0.7
+fastjsonschema==2.19.1
+filelock==3.13.1
+fonttools==4.57.0
+fqdn==1.5.1
+fsspec==2025.3.2
+geographiclib==2.0
+geopy==2.4.1
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.2
+google-api-python-client==2.164.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.69.2
+grpcio==1.71.0
+grpcio-status==1.71.0
+gymnasium==1.1.1
+h11==0.14.0
+httpcore==1.0.4
+httplib2==0.22.0
 httptools==0.6.4
-httpx==0.28.1
-huggingface-hub==0.33.2
-humanfriendly==10.0
-identify==2.6.12
-idna==3.10
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-instructor==1.9.2
-ipython==9.4.0
-ipython_pygments_lexers==1.1.1
-jedi==0.19.2
+httpx==0.27.0
+huggingface-hub==0.31.2
+idna==3.6
+iniconfig==2.1.0
+ipykernel==6.29.3
+ipython==8.22.2
+ipywidgets==8.1.2
+isoduration==20.11.0
+isort==6.0.1
+jedi==0.19.1
 Jinja2==3.1.6
-jiter==0.10.0
-json5==0.12.0
-json_repair==0.25.2
-jsonpatch==1.33
-jsonpickle==4.1.1
-jsonpointer==3.0.0
-jsonref==1.1.0
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-kubernetes==33.1.0
-langchain==0.3.26
-langchain-core==0.3.68
-langchain-text-splitters==0.3.8
-langsmith==0.4.4
-litellm==1.72.6
-Markdown==3.8.2
+joblib==1.5.0
+json5==0.9.20
+jsonpointer==2.4
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.9.0
+jupyter-lsp==2.2.3
+jupyter_client==8.6.0
+jupyter_core==5.7.1
+jupyter_server==2.13.0
+jupyter_server_terminals==0.5.2
+jupyterlab==4.1.3
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.3
+jupyterlab_widgets==3.0.10
+kiwisolver==1.4.8
+langcodes==3.5.0
+language_data==1.3.0
+loguru==0.7.3
+marisa-trie==1.2.1
 markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib-inline==0.1.7
+MarkupSafe==2.1.5
+matplotlib==3.10.1
+matplotlib-inline==0.1.6
 mdurl==0.1.2
-mergedeep==1.3.4
-mkdocs==1.6.1
-mkdocs-get-deps==0.2.0
-mkdocs-material==9.6.15
-mkdocs-material-extensions==1.3.1
-mmh3==5.1.0
+mistune==3.0.2
 mpmath==1.3.0
-multidict==6.6.3
-networkx==3.5
-nodeenv==1.9.1
-numpy==2.3.1
-oauthlib==3.3.1
-ollama==0.5.1
-onnxruntime==1.22.0
-openai==1.93.3
-openpyxl==3.1.5
-opentelemetry-api==1.34.1
-opentelemetry-exporter-otlp-proto-common==1.34.1
-opentelemetry-exporter-otlp-proto-grpc==1.34.1
-opentelemetry-exporter-otlp-proto-http==1.34.1
-opentelemetry-proto==1.34.1
-opentelemetry-sdk==1.34.1
-opentelemetry-semantic-conventions==0.55b1
-orjson==3.10.18
+murmurhash==1.0.12
+mypy_extensions==1.1.0
+nbclient==0.9.0
+nbconvert==7.16.2
+nbformat==5.9.2
+nest-asyncio==1.6.0
+networkx==3.4.2
+nltk==3.9.1
+notebook==7.1.1
+notebook_shim==0.2.4
+numpy==2.2.6
 overrides==7.7.0
-packaging==24.2
-paginate==0.5.7
-parso==0.8.4
+packaging==23.2
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.3
 pathspec==0.12.1
 pdfminer.six==20250506
-pdfplumber==0.11.7
-pillow==11.3.0
-platformdirs==4.3.8
-posthog==5.4.0
-pre_commit==4.2.0
-prompt_toolkit==3.0.51
-propcache==0.3.2
-protobuf==5.29.5
-pure_eval==0.2.3
+pillow==11.2.1
+platformdirs==4.1.0
+pluggy==1.6.0
+preshed==3.0.9
+prometheus_client==0.20.0
+prompt-toolkit==3.0.43
+proto-plus==1.26.1
+protobuf==5.29.3
+psutil==5.9.8
+pure-eval==0.2.2
 pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pybase64==1.4.1
-pycparser==2.22
-pydantic==2.11.7
+pyasn1_modules==0.4.1
+pycparser==2.21
+pydantic==2.11.4
+pydantic-settings==2.9.1
 pydantic_core==2.33.2
-Pygments==2.19.2
-PyJWT==2.10.1
-pymdown-extensions==10.16
-pypdfium2==4.30.1
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-pyreadline3==3.5.4
+pygame==2.6.1
+Pygments==2.17.2
+PyMuPDF==1.25.5
+pyparsing==3.2.1
+pytest==8.3.5
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-pyvis==0.3.2
-PyYAML==6.0.2
-pyyaml_env_tag==1.1
-referencing==0.36.2
+python-dotenv==1.1.0
+python-json-logger==2.0.7
+python-multipart==0.0.20
+pytz==2024.2
+pywin32==306
+pywinpty==2.0.13
+PyYAML==6.0.1
+pyzmq==25.1.2
+qtconsole==5.5.1
+QtPy==2.4.1
+referencing==0.33.0
 regex==2024.11.6
-requests==2.32.4
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
+requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
 rich==14.0.0
-rpds-py==0.26.0
-rsa==4.9.1
+rich-toolkit==0.14.6
+rpds-py==0.18.0
+rsa==4.9
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.3
+seaborn==0.13.2
+Send2Trash==1.8.2
+sentence-transformers==4.1.0
+setuptools==80.0.0
 shellingham==1.5.4
-six==1.17.0
+six==1.16.0
+smart-open==7.1.0
 sniffio==1.3.1
-SQLAlchemy==2.0.41
+soupsieve==2.5
+spacy==3.8.6
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
 stack-data==0.6.3
+starlette==0.46.2
 sympy==1.14.0
-tenacity==9.1.2
-tiktoken==0.9.0
-tokenizers==0.21.2
-tomli==2.2.1
-tomli_w==1.2.0
+terminado==0.18.0
+thinc==8.3.6
+threadpoolctl==3.6.0
+tinycss2==1.2.1
+tokenizers==0.21.1
+torch==2.7.0
+tornado==6.4
 tqdm==4.67.1
-traitlets==5.14.3
-typer==0.16.0
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-urllib3==2.5.0
-uv==0.7.20
-uvicorn==0.35.0
-virtualenv==20.31.2
-watchdog==6.0.0
-watchfiles==1.1.0
+traitlets==5.14.1
+transformers==4.51.3
+typer==0.15.4
+types-python-dateutil==2.8.19.20240106
+typing-inspection==0.4.0
+typing_extensions==4.12.2
+tzdata==2024.2
+uri-template==1.3.0
+uritemplate==4.1.1
+urllib3==2.2.1
+uvicorn==0.34.2
+virtualenv==20.25.0
+wasabi==1.1.3
+watchfiles==1.0.5
 wcwidth==0.2.13
-websocket-client==1.8.0
+weasel==0.4.1
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.7.0
 websockets==15.0.1
-yarl==1.20.1
-zipp==3.23.0
-zstandard==0.23.0
+widgetsnbextension==4.0.10
+win32_setctime==1.2.0
+wrapt==1.17.2
